db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-db-deployment
  labels:
    app: quiz-db
spec:
  replicas: 3
  selector:
    matchLabels:
      app: quiz-db
  template:
    metadata:
      labels:
        app: quiz-db
    spec:
      containers:
        - image: fegrus/quiz-db
          name: db
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: quiz-db
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
