sb-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-sb-server-deployment
  labels:
    app: quiz-sb-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: quiz-sb-server
  template:
    metadata:
      labels:
        app: quiz-sb-server
    spec:
      containers:
        - image: fegrus/quiz-sb-server
          name: sb-server
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: sb-service
spec:
  selector:
    app: quiz-sb-server
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sb-server-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sb-service
                port:
                  number: 8080
